fix: don't stretch card content over too wide of a screen

--- a/style.css
+++ b/style.css
@@ -471,5 +471,10 @@ dialog .card .content {
 	display: block;
 }
 
+@media only screen and (min-width: 600px) {
+	dialog {
+		max-width: 100ch;
+	}
+}
 
 /*	  #endregion	  */
